k8s/radarr/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-deployment
  namespace: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        # IMPORTANT: This forces the container to run as 'mediaowner' (1302)
        # to ensure it has permission to read/write to the NFS share.
        runAsUser: 1302
        runAsGroup: 1302
        fsGroup: 1302
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
            - containerPort: 7878
          volumeMounts:
            # Mount Radarr's private config storage
            - name: config-storage
              mountPath: /config
            # Mount the SHARED media storage from the Jellyfin PVC
            - name: media-storage
              mountPath: /media
      volumes:
        - name: config-storage
          persistentVolumeClaim:
            claimName: radarr-config-pvc
        # This is direct NFS mount for sharing data across multiple namespace
        - name: media-storage
          nfs:
            server: 192.168.0.202
            path: /mnt/data
