k8s/radarr/04-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr-ingressroute
  namespace: radarr
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`radarr.localhost`)
      kind: Rule
      services:
        - name: radarr-service
          port: 7878
